    (Paul Yang via namit)

    HIVE-1124. Create view should expand the query text consistently.
    (John Sichi via zshao)

    HIVE-1129. Fix assertion in ExecDriver.execute. (John Sichi via zshao)

    HIVE-1141. Remove recursive call in FetchOperator.getNextRow.
    (Zheng Shao via He Yongqiang)

    HIVE-1140. Fix incorrect ambiguous column reference error message.
    (Paul Yang via zshao)

Release 0.5.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-236. RLIKE/REGEXP allowing matching of partial strings.
    (Paul Yang via zshao)

  NEW FEATURES

    HIVE-743. Let user specify serde for custom scripts.
    (Namit Jain via rmurthy)

    HIVE-749. add hive.optimize.pruner
    (Zheng Shao via namit)

    HIVE-693. Add a AWS S3 log format deserializer
    (Zheng Shao and Andraz Tori via namit)

    HIVE-699. Functions with variable length arguments
    (Zheng Shao via namit)

    HIVE-713. Integrate operator counters into query plan to view progress of
    queries. (Namit Jain and Raghu Murthy via zshao)

    HIVE-187. Preliminary ODBC Support. (Eric Hwang via rmurthy)

    HIVE-708. Add TypedBytes SerDe for transform. (Namit Jain via zshao)

    HIVE-777. CREATE TABLE with STRUCT type. (He Yongqiang via zshao)

    HIVE-792. Support "add archive" in addition to "add file" and "add jar".
    (He Yongqiang via zshao)

    HIVE-645. UDF to run JDBC
    (Edward Capriolo via namit)

    HIVE-785. Add RecordWriter for ScriptOperator. (Namit Jain via zshao)

    HIVE-687. Add UDF unhex. (Mihir Kedia via namit)

    HIVE-591. Add Unique Join. (Emil Ibrishimov via namit)

    HIVE-667. Provide hive ql to check table/partition status.
    (Yongqiang He via zshao)

    HIVE-843. Add UDFs for hour, minute and second
    (Zheng Shao via namit)

    HIVE-854. Provide for post-execute hooks.
    (Namit Jain via rmurthy)

    HIVE-853. Provide hints for controlling join order
    (Emil Ibrishimov via namit)

    HIVE-31. Support Create Table As Select